# agent-setting

./: pyproject.toml
agent_setting/: __init__.py  backup.py  cli.py  config.py  logger.py  uploader.py
test/: test_backup.py  test_cross_platform_enhanced.py
